fix: granted authorities typing in UserDetailsService